############################################################
#
#	CyberLink for C
#
#	Copyright (C) Satoshi Konno 2005
#
#	01/26/04
#		- first release.
#	09/11/05
#		- Thanks for Roland Moser <rmoser@gmx.at>
#		- Changed the configure to run 'make install' normally.
#
#	10/31/05
#		- Added libtool stuff and debian package creation
#
############################################################

AC_INIT(include/cybergarage/typedef.h)
AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE(clinkc, 1.0)
AM_CONFIG_HEADER(config.h)

##############################
# Constants
##############################

# Expat version.
EXPAT_VERSION=1.95

# Libxml2 version.
LIBXML2_VERSION=2.6.20

#Libcurl version
LIBCURL3_VERSION=7.15.0

##############################
# Checks for programs.
##############################

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_AWK
AC_PROG_LIBTOOL
AC_PROG_RANLIB
AC_LANG_CPLUSPLUS

##############################
#Checks for CYGWIN an MinGW
##############################

#AC_CYGWIN
#if [ test $CYGWIN = yes || test $MINGW = yes ]; then
  #AC_LIBTOOL_WIN32_DLL
  #AM_DISABLE_STATIC
  AC_CHECK_LIB([ws2_32],[main])
  #AC_CHECK_LIB([iphlpapi],[main])
#fi

##############################
#Checks, if libtool is to be used
###############################

AC_ARG_WITH(libtool, [  --with-libtool	Use libtool to build the library],,)
AM_CONDITIONAL(HAVE_LIBTOOL, test $with_libtool = yes)

##############################
#Checks, if timing info is printed
##############################
AC_ARG_WITH(timings, [  --with-timings	Show timings in debug-info],,)
if [ test $with_timings = yes ]; then
  CFLAGS="$CFLAGS -DSHOW_TIMINGS"
fi

##############################
# Checks for header files.
##############################

AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h limits.h netdb.h netinet/in.h stdlib.h string.h sys/param.h sys/socket.h unistd.h])

##############################
# Checks for libxml2 libraries.
##############################

AC_ARG_ENABLE(libxml2,
	[  --enable-libxml2	enable Libxml2 support [default=no]],
	[
		if test $enableval = yes; then
			USE_LIBXML2=yes
		else
			USE_LIBXML2=no
		fi
	],[
		USE_LIBXML2=no
	]
)

if [ test $USE_LIBXML2 = yes ]; then
	AC_CHECK_PROG(XML2_CONFIG, xml2-config, yes, no)
	if [ test $XML2_CONFIG = yes ]; then
		AC_DEFINE([CG_XMLPARSER_LIBXML2],1,[LIBXML2])
		XML_CFLAGS=`xml2-config --cflags`
		XML_LIBS=`xml2-config --libs`
		AC_SUBST(XML_CFLAGS)
		AC_SUBST(XML_LIBS)
	else
		AC_MSG_ERROR(CyberLink needs libxml2 $LIBXML2_VERSION later)
	fi
fi

##############################
# Checks for Expat libraries.
##############################

if [ test $USE_LIBXML2 != yes ]; then
	AC_CHECK_HEADERS([expat.h],,[AC_MSG_ERROR(CyberLink needs Expat $EXPAT_VERSION later)])
	AC_CHECK_LIB([expat],[main])
fi

##############################
# Checks for libcurl libraries.
##############################

AC_ARG_ENABLE(libcurl,
	[  --enable-libcurl	enable Libcurl support [default=yes]],
	[
		if test $enableval = yes; then
			USE_LIBCURL=yes
		else
			USE_LIBCURL=no
		fi
	],[
		USE_LIBCURL=no
	]
)

if [ test $USE_LIBCURL = yes ]; then
	AC_CHECK_PROG(CURL_CONFIG, curl-config, yes, no)
	if [ test $CURL_CONFIG = yes ]; then
		AC_DEFINE([CG_HTTP_CURL],1,[LIBCURL])
		HTTP_CFLAGS=`curl-config --cflags`
		HTTP_LIBS=`curl-config --libs`
		AC_SUBST(HTTP_CFLAGS)
		AC_SUBST(HTTP_LIBS)
	else
		AC_MSG_ERROR(CyberLink needs libcurl $LIBCURL_VERSION later)
	fi
fi

##############################
# Checks for iconv
##############################

AC_CHECK_FUNCS([iconv])
AC_CHECK_HEADERS([iconv.h])
AC_CHECK_LIB([iconv],[main])

##############################
# Checks for pthread
##############################

AC_CHECK_HEADERS([pthread.h],,[AC_MSG_ERROR(CyberLink needs POSIX thread library)])
AC_CHECK_LIB([pthread],[main])

##############################
# Checks for typedefs, structures, and compiler characteristics.
##############################

#AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_STRUCT_TM

##############################
# Checks for Network functions
##############################

AC_CHECK_FUNCS([socket])
AC_CHECK_FUNCS([inet_ntoa])
AC_CHECK_HEADERS([ifaddrs.h])
AC_CHECK_FUNCS([getifaddrs])

AC_MSG_CHECKING(for socklen_t)
AC_TRY_COMPILE([
#include <sys/types.h>
#include <sys/socket.h>
socklen_t foosocket;
],
[],
[AC_MSG_RESULT(yes)
AC_DEFINE([HAVE_SOCKLEN_T],1,[SOCKLEN_T])],
[AC_MSG_RESULT(no)]
)

##############################
# Checks for other functions.
##############################

AC_CHECK_FUNCS([fopen])
AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([realpath])
AC_CHECK_FUNCS([localtime_r])
AC_CHECK_FUNCS([gmtime_r])
AC_CHECK_FUNCS([snprintf])
AC_CHECK_FUNCS([uname])
AC_CHECK_FUNCS([strdup])

##############################
# Makefiles
##############################

AC_OUTPUT([
clinkc.pc
Makefile
include/Makefile
lib/Makefile
lib/unix/Makefile
sample/Makefile
sample/clock/Makefile
sample/clock/unix/Makefile
sample/upnpdump/Makefile
sample/upnpdump/unix/Makefile
])
