########################################
# Headers
########################################

clinkcav_header = \
	cybergarage/upnp/media/ccontent.h \
	cybergarage/upnp/media/cdidl.h \
	cybergarage/upnp/media/cmd5.h \
	cybergarage/upnp/media/cmediaserver.h \
	cybergarage/upnp/media/cresource.h

########################################
# Library
########################################

nobase_include_HEADERS = \
	$(clinkcav_header)
